# txed

./: .gitignore  Cargo.toml  DESIGN.md  HACKING.md  README.md  TODO.md  helptext.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: JSON_EVENTS.md  MCP_INTEGRATION.md
examples/: manifest_advanced.json  manifest_simple.json  mcp_server.py
src/: cli.rs  engine.rs  error.rs  events.rs  exit_codes.rs  input.rs  main.rs  model.rs  policy.rs  reporter.rs  rgjson.rs  write.rs
src/replacer/: mod.rs  validate.rs
tests/: cli_args.rs  cli_tests.rs  diff_newline_tests.rs  dogfood.rs  exit_code_tests.rs  fs_behavior_tests.rs  fuzz_tests.rs  glob_tests.rs  input_behavior_tests.rs  json_events_tests.rs  json_events_v1_tests.rs  manifest_precedence.rs  operations_tests.rs  output_format_tests.rs  output_stream_tests.rs  output_tests.rs  path_behavior_repro.rs  permissions_tests.rs  range_tests.rs  rg_integration_tests.rs  rg_json_tests.rs  ripgrep_workflow.rs  stdin_json_tests.rs  stress_tests.rs  transaction_tests.rs  validation_mode_tests.rs
